package com.project.cowsandbulls;

public class Main {
    public static void main(String[] args) {
        new MainFrame();
    }
}
