@startuml

title __COWSANDBULLS's Class Diagram__\n

  namespace com.project.cowsandbulls {
    class com.project.cowsandbulls.AISolver {
        - colors : Color[]
        - possibleCombinations : List<Color[]>
        + AISolver()
        + makeGuess()
        + updatePossibleCombinations()
        - calculateBullsCows()
        - generateAllCombinations()
    }
  }
  

  namespace com.project.cowsandbulls {
    class com.project.cowsandbulls.CowsAndBulls {
        - colors : Color[]
        - currentGuess : int
        - currentPosition : int
        - guessLabels : Piece[][]
        - guessesPanel : JPanel
        - maxGuesses : int
        - resultLabels : Piece[][]
        - resultsPanel : JPanel
        - secret : Color[]
        - secretCodeLabels : Piece[]
        - submitGuess : JButton
        - toggleShowGuess : boolean
        + CowsAndBulls()
        + actionPerformed()
        + mouseClicked()
        + mouseEntered()
        + mouseExited()
        + mousePressed()
        + mouseReleased()
        - calculateBullsCows()
        - displayResults()
        - generateSecretCode()
        - initialize()
        - startNewGame()
    }
  }
  

  namespace com.project.cowsandbulls {
    class com.project.cowsandbulls.Main {
        {static} + main()
    }
  }
  

  namespace com.project.cowsandbulls {
    class com.project.cowsandbulls.Piece {
        - color : Color
        - icon : ImageIcon
        + Piece()
        + getColor()
        + getIcon()
        + setColor()
        + setPieceIcon()
    }
  }
  

  namespace com.project.cowsandbulls {
    class com.project.cowsandbulls.ServiceClass {
        {static} + BROWN : Color
        {static} + colors : Color[]
        {static} + getIcon()
    }
  }
  

  com.project.cowsandbulls.CowsAndBulls .up.|> java.awt.event.ActionListener
  com.project.cowsandbulls.CowsAndBulls .up.|> java.awt.event.MouseListener
  com.project.cowsandbulls.CowsAndBulls -up-|> javax.swing.JFrame
  com.project.cowsandbulls.CowsAndBulls o-- com.project.cowsandbulls.AISolver : aiSolver
  com.project.cowsandbulls.Piece -up-|> javax.swing.JLabel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
